--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,12 @@ python:
   - "3.7-dev" # 3.7 development branch
   - "nightly" # currently points to 3.7-dev
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install:
+  - pip install pybuilder coveralls
+  - pyb -v install_dependencies
+
+before_deploy:
+  - pyb -v
+
 # command to run tests
 script: ./build.py
