--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,9 @@
 language: python
 python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
   - "3.4"
   - "3.5"
-  - "3.5-dev" # 3.5 development branch
   - "3.6"
-  - "3.6-dev" # 3.6 development branch
-  - "3.7-dev" # 3.7 development branch
-  - "nightly" # currently points to 3.7-dev
+  - "3.7"
 # command to install dependencies
 install:
   - pip install pybuilder coveralls
@@ -20,4 +13,4 @@ before_deploy:
   - pyb -v
 
 # command to run tests
-script: ./build.py
+script: pyb -v
